# edge-ai-suites

./: .gitmodules  README.md
.github/: CODEOWNERS
.github/workflows/: [GENAI]-smart-traffic-intersection-agent.yaml  education-suite-scan.yaml  industrial-edge-insights-time-series-pull-request.yml  industrial-edge-insights-time-series-scans.yml  metro-ai-suite-smart-nvr.yaml  metro_vision_ai_app_recipe_pull_request.yaml  metro_vision_ai_app_recipe_sanity.yaml  pre-merge.yml  robotics-components-fast-mapping.yaml  robotics-components-its-planner.yaml  robotics-components-multicam-demo.yaml  robotics-components.yaml  robotics-pre-merge.yaml  sensor-fusion-for-traffic-management-scan.yaml  siv-weekly-tag.yaml  spineapp_pull_request.yaml  spineapp_sanity.yaml  video-processing-for-nvr-scan.yaml  visual-search-qa-scans.yml
education-ai-suite/: README.md
education-ai-suite/smart-classroom/: README.md  config.yaml  main.py  pipeline.py  requirements.txt
education-ai-suite/smart-classroom/api/: endpoints.py
health-and-life-sciences-ai-suite/: .gitmodules  Makefile  README.md  docker-compose.yaml
manufacturing-ai-suite/: README.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/: .env  .gitignore  Makefile  README.md  docker-compose.yml  third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-time-series/: .env  .gitignore  Makefile  README.md  docker-compose.yml  generate-telegraf-config.py  requirements.txt  third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-vision/: .env  .env_pallet_defect_detection  .env_pcb-anomaly-detection  .env_pcb_anomaly_detection  .env_weld-porosity  .env_weld_porosity_classification  .env_worker-safety-gear-detection  .env_worker_safety_gear_detection  .gitignore  README.md  benchmark_start.sh  config.yml  docker-compose.yml  run.sh  sample_list.sh  sample_start.sh  sample_status.sh  sample_stop.sh  setup.sh
metro-ai-suite/: README.md
metro-ai-suite/image-based-video-search/: .env  README.md  compose.yml
metro-ai-suite/interactive-digital-avatar/: README.md
metro-ai-suite/metro-sdk-manager/: .gitignore  README.md
metro-ai-suite/metro-vision-ai-app-recipe/: .env  README.md  benchmark_start.sh  compose-scenescape.yml  compose-without-scenescape.yml  install.sh
metro-ai-suite/sensor-fusion-for-traffic-management/: install_driver_related_libs.sh  install_project_related_libs.sh  scan_install_project_related_libs.sh
metro-ai-suite/smart-nvr/: setup.sh
metro-ai-suite/video-processing-for-nvr/: README.md  live555_install.sh
retail-ai-suite/: README.md
robotics-ai-suite/components/fast-mapping/: .gitignore  CMakeLists.txt  Makefile  README.md  REUSE.toml  introduce-changes-testfile  package.xml
robotics-ai-suite/components/fast-mapping/.github/linters/: actionlint.yml
robotics-ai-suite/components/fast-mapping/docs/: README.md
robotics-ai-suite/components/fast-mapping/humble/debian/: changelog  control  rules
robotics-ai-suite/components/fast-mapping/include/: DataQueue.cc  DataQueue.h  FastMappingNode.h  ImageFrame.h  LoopTimer.h  MapManager.h  NodeConfig.h  Subscribers.h
robotics-ai-suite/components/fast-mapping/jazzy/debian/: changelog  control  rules
robotics-ai-suite/components/fast-mapping/launch/: fast_mapping.launch.py  fast_mapping_rtabmap.launch.py
robotics-ai-suite/components/fast-mapping/src/: FastMappingNode.cpp  MapManager.cpp  Subscribers.cpp  main.cpp
robotics-ai-suite/components/fast-mapping/src/fast_mapping_lib/: CMakeLists.txt  OctoMap.cpp  OctoMap.h  logger.cpp  logger.h
robotics-ai-suite/components/fast-mapping/src/fast_mapping_lib/se/: node.hpp  node_iterator.hpp  octant_ops.hpp  octree.hpp  octree_defines.h  voxel_traits.hpp
robotics-ai-suite/components/fast-mapping/src/fast_mapping_lib/se/algorithms/: filter.hpp  unique.hpp
robotics-ai-suite/components/fast-mapping/src/fast_mapping_lib/se/bfusion/: bspline_lookup.cc  mapping_impl.hpp
robotics-ai-suite/components/fast-mapping/src/fast_mapping_lib/se/functors/: data_handler.hpp  projective_functor.hpp
robotics-ai-suite/components/fast-mapping/src/fast_mapping_lib/se/utils/: math_utils.h  memory_pool.hpp  morton_utils.hpp
robotics-ai-suite/components/fast-mapping/tests/: REUSE.toml  core_dump_test.py  happy_path_test.py  realsense_support_2d_map_test.py  test_helpers.py  unhappy_path_test.py
robotics-ai-suite/components/fast-mapping/tests/assets/: publish_camera_info.py  publish_image_raw_nok.py  rviz2_config_2d_v1.rviz  rviz2_config_3d_v1.rviz
robotics-ai-suite/components/fast-mapping/tests/ros2/: fm_smoke_test_launch.py  generic_test_launch.py  gtests.cpp  map_validation_launch.py  negative_tests.cpp  occupancy_grid.cpp  occupancy_map.cpp  publish_camera_info.py  publish_image_raw_nok.py  sdl_depth_info_topic_test_launch.py  sdl_depth_topic_test_launch.py
robotics-ai-suite/components/fast-mapping/tests/ros2/reference_bag/: metadata.yaml
robotics-ai-suite/components/fast-mapping/tests/ros2/ros2bag/: metadata.yaml
robotics-ai-suite/components/its-planner/collab_slam/nav2_bringup_collab/: CMakeLists.txt  README.md  package.xml
robotics-ai-suite/components/its-planner/collab_slam/nav2_bringup_collab/launch/: bringup_launch.py  localization_launch.py  multi_tb3_simulation_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_simulation_launch.py
robotics-ai-suite/components/its-planner/collab_slam/nav2_bringup_collab/maps/: turtlebot3_world.yaml
robotics-ai-suite/components/its-planner/collab_slam/nav2_bringup_collab/params/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_params.yaml
robotics-ai-suite/components/its-planner/relocalization/relocalization_bringup/: CMakeLists.txt  package.xml
robotics-ai-suite/components/its-planner/relocalization/relocalization_bringup/launch/: relocalization.launch.xml  relocalization_demo.launch.xml
robotics-ai-suite/components/its-planner/send_localization/test/: CMakeLists.txt
robotics-ai-suite/robot-vision-control/: Dockerfile.exec  docker_build_rvc_img.sh  docker_run_rvc_img.sh
(+689 files in other folders)
